--- a/HW18_Skills/style.css
+++ b/HW18_Skills/style.css
@@ -218,9 +218,38 @@
     width: 100%;
   }
   
-  @media screen and (max-width: 640px) {
-    .body {
-      float: none;
-      width: auto;
+  @media screen and (min-width: 491px) {  
+    header{
+    width: 90%;
     }
-  }
+    
+    nav{
+    width: 90%;
+    }
+      
+    .container2{ 
+    float: center;
+    width: 48%
+    }
+    .footer-distributed{
+    width: 100%;
+    }
+    
+    }
+    
+    @media screen and (max-width: 450px) {
+    header{
+    width: 90%;
+    }
+    
+    nav{
+    width: 90%;
+    }
+    
+    .container2{
+    width: 90%;
+    }
+    .footer-distributed{
+    width: 90%;
+    }
+    } 
